Bug 164799 - Tooltips appear empty (light fg on light bg) if Skia is disabled and only GDI rendering
Summary: Tooltips appear empty (light fg on light bg) if Skia is disabled and only GDI...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
: 164947 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-01-22 18:25 UTC by Regina Henschel
Modified: 2025-01-31 08:34 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-01-22 18:25:23 UTC
Start current LO 25.8.
Tool > Options > Libreoffice > View. Disable Skia. OK. Restart LO.

Open e.g. a Writer document and hover over the toolbar. The tooltips of all icons are empty.

I see the problem in
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 35b9371acf5a1295ef7c12bbfa285efb7ea4b485
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

It is OK in Version: 25.2.0.2 (X86_64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 Sierk Bornemann 2025-01-22 18:58:02 UTC
I cannot reproduce/confirm the issue in question in LO on macOS, all seems to be OK:

LO 25.8.0.0.alpha0+, Skia enabled:
Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 47e110fc66292e76152252a90a0e20580c33c13d
CPU threads: 10; OS: macOS 15.2; UI render: Skia/Metal; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

LO 25.8.0.0.alpha0+, Skia disabled:
Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 47e110fc66292e76152252a90a0e20580c33c13d
CPU threads: 10; OS: macOS 15.2; UI render: default; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

LO 25.2.0.2, Skia enabled:
Version: 25.2.0.2 (AARCH64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 10; OS: macOS 15.2; UI render: Skia/Metal; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

LO 25.2.0.2, Skia disabled:
Version: 25.2.0.2 (AARCH64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 10; OS: macOS 15.2; UI render: default; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

Hovering over the toolbar icons, all tooltips are correctly shown, visible/readable, not empty. Wether Skia is enabled or disabled. In system (here: dark) mode as well as in light mode.
Comment 2 V Stuart Foote 2025-01-23 15:06:18 UTC Comment hidden (obsolete)
Comment 3 V Stuart Foote 2025-01-23 15:17:37 UTC
> 
> Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 35b9371acf5a1295ef7c12bbfa285efb7ea4b485
> CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster;
> VCL: win
> Locale: en-US (en_US); UI: en-US
> Calc: CL threaded
> 
> @Regina, do you have one of the new "Appearance" themes enabled?

Oh, wait. Issue is if I actually *disable* the Skia rendering--so CPU only or CPU HA GDI rendering, then the tooltips take a light fg on a light bg! With Automatic, or applying one of the new appearance themes. 

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 35b9371acf5a1295ef7c12bbfa285efb7ea4b485
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Regina Henschel 2025-01-23 15:24:17 UTC
I see the problem in Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 35b9371acf5a1295ef7c12bbfa285efb7ea4b485
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
That is a version from 2025_01_16.

It was OK in Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f4a3ffe1110aa38a3836533e6c51b910c68c2336
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
That is a version from 2025_01_04.

LibreOfficeDev Themes is "Automatic".
Options Appearance is "System".
My Windows 11 default app mode is "Light".
Comment 5 V Stuart Foote 2025-01-23 15:33:50 UTC
tested OK with a 12-24-2024 build of 25.2.0b1+, and the 01-14-2025 b2 build of 25.2.0.2

So something recent in master against a 25.8.0, needs a bibisect.

=-testing-=

Version: 25.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 5545a3d22f152e628f7ad9969af87b34e55b5fe4
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 25.2.0.2 (X86_64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 Sahil Gautam 2025-01-23 16:06:39 UTC
I am able to reproduce the bug.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community, Sika disabled
Build ID: a6c9519b5f92eab604a8884aa6db4e8f1ac616b3
CPU threads: 32; OS: Windows 11 X86_64 (build 22631); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 7 Gabor Kelemen (Collabora) 2025-01-27 15:19:00 UTC
Bibisected with 258-win to:

https://git.libreoffice.org/core/+/e0d4d178caff1414a9a21fa57f06bc8d4d2c389a%5E%21

author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jan 13 15:03:05 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jan 14 15:47:13 2025 +0100

Change alpha behavour of OutputDevice::SetFillColor

Adding CC to: Noel Grandin
Comment 8 Michael Weghorn 2025-01-30 08:54:27 UTC
*** Bug 164947 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2025-01-30 10:53:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff3c9428e7936ed409fb012ffb66d0321f169e94

tdf#164799 Tooltips appear empty

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Weghorn 2025-01-30 12:10:18 UTC
Thanks for the fix!

Verified with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1bbce4068828f3d1240afd50b228d820c17e848
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 11 Commit Notification 2025-01-31 08:34:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7cd00ca413da8d29f54749c04493e85937a2fa38

use more OutputDevice::Push/Pop (tdf#164799 related)

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.