tdf#164799 Tooltips appear empty

regression from
    commit e0d4d178caff1414a9a21fa57f06bc8d4d2c389a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jan 13 15:03:05 2025 +0200
    Change alpha behavour of OutputDevice::SetFillColor

where DrawColorWallpaper is not correctly saving/restoring the
fill color.
Previously this worked because GetFillColor would return a
transparent color if no fill color was set, and a transparent
fill color would be interpreted as "no color" when drawing.

Change-Id: I63e1ba2df0a5e2088d018068fe0a0e45453b7c77
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180928
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>